# rustracing_jaeger

./: .travis.yml  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml
examples/: http_hello_server.rs  report.rs
src/: constants.rs  error.rs  lib.rs  reporter.rs  span.rs  tracer.rs
src/thrift/: agent.rs  jaeger.rs  mod.rs
