[package]
name = "rustracing_jaeger"
version = "0.3.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Jaeger client library created on top of rustracing"
homepage = "https://github.com/sile/rustracing_jaeger"
repository = "https://github.com/sile/rustracing_jaeger"
readme = "README.md"
keywords = ["opentracing", "jaeger"]
license = "MIT"
edition = "2018"

[badges]
coveralls = {repository = "sile/rustracing"}

[dependencies]
crossbeam-channel = "0.3"
hostname = "0.2"
percent-encoding = "1"
rand = "0.7"
rustracing = "0.2.0"
thrift_codec = "0.1"
trackable = "0.2"

[dev-dependencies]
bytecodec = "0.4"
fibers_global = "0.1"
fibers_http_server = "0.1"
futures = "0.1"
httpcodec = "0.2"
