[package]
name = "rustracing_jaeger"
version = "0.10.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Jaeger client library created on top of rustracing"
homepage = "https://github.com/sile/rustracing_jaeger"
repository = "https://github.com/sile/rustracing_jaeger"
readme = "README.md"
keywords = ["opentracing", "jaeger"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/rustracing"}

[dependencies]
crossbeam-channel = "0.5"
hostname = "0.4.0"
percent-encoding = "2.1.0"
rand = "0.8.3"
rustracing = "0.6"
thrift_codec = "0.3"
trackable = "1"

[target.'cfg(not(target_os="android"))'.dependencies]
local-ip-address = "0.6.1"

[dev-dependencies]
bytecodec = "0.4"
fibers_global = "0.1"
fibers_http_server = "0.2"
futures = "0.1"
httpcodec = "0.2"
